[project]
name = "chatbot-poc-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=1.4.0",
    "ipykernel>=7.3.0",
    "nbconvert>=7.17.1",
    "openai>=2.43.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/chatbot_ui",
]


[dependency-groups]
dev = [
    "matplotlib>=3.11.0",
    "langsmith>=0.9.3",
    "langchain-community>=0.4.0,<0.4.2",
    "langchain-openai>=1.1.9",
    "langsmith>=0.8.16",
    "matplotlib>=3.11.0",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
    "instructor>=1.15.4",
    "cohere>=7.0.5",
]
