[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tkenner-k", email = "kenner.g.tara@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cohere>=7.0.5",
    "fastapi>=0.138.0",
    "groq>=1.4.0",
    "instructor>=1.15.4",
    "langsmith>=0.9.3",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "uvicorn>=0.49.0",
]

[build-system]
#requires = ["uv_build>=0.11.23,<0.12.0"]
#build-backend = "uv_build"

requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv.sources]
shared ={ workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md/",
]

