[project]
name = "chatbot-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tkenner-k", email = "kenner.g.tara@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "streamlit>=1.58.0",
]

[build-system]
#requires = ["uv_build>=0.11.23,<0.12.0"]
#build-backend = "uv_build"

requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv.sources]
shared ={ workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md/",
]
